--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Antonette",
         "Bauch",
+        "Boundry",
         "Chelsey",
         "Corkery",
         "Delphine",
